Attempt to fix unncecessary script loading on Mobile

--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ ul {
 .socials {
     display: flex;
     justify-content: center;
-    gap: max(12.5px, 2%);
+    gap: max(25px, 2%);
 }
 
 .socials li i {
